--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 
 security.token.secret=gestaovagas@2023
+security.token.secret.candidate=gestaovagas@2023#candidate
